# JsonManager

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
HoylJsonManager/: checker.py
jsonChecker/: __init__.py  jsonChecker.py
jsonManager/: dropKey.py  get.py  update.py
jsonSimpleManager/: __init__.py
