[tool.poetry]
name = "jsonchecker"
version = "1.0"
description = "Pequena biblioteca para verificar se um arquivo JSON está de acordo com um schema"
authors = ["Alan Reis <alanreisanjo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
