[tool.poetry]
name = "jsonmanager"
version = "1.0"
description = "Pequena biblioteca para validação e manipulação de JSONs."
authors = ["Alan Reis <alanreisanjo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
